--- a/GroupTutorialAssignmentWeekFive/pom.xml
+++ b/GroupTutorialAssignmentWeekFive/pom.xml
@@ -7,6 +7,14 @@
     <groupId>edu.du.ict_4305_grouptutorialassignmentweekfive</groupId>
     <artifactId>GroupTutorialAssignmentWeekFive</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
