--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /GroupTutorialAssignmentWeekFour/target/
 /GroupTutorialAssignmentWeekFour/nbproject/
+GroupTutorialAssignmentWeekSeven/target/
+GroupTutorialAssignmentWeekSeven/.idea/
+
